UI: fix layout issues

--- a/_assets/css/main.css
+++ b/_assets/css/main.css
@@ -36,11 +36,3 @@ i.year {
   border-top: 1px solid #f5a000;
   float: right;
 }
-
-p.comment {
-  text-align: center;
-}
-
-a.affiliate {
-  float: left;
-}
